--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 authors = [
     { name = "jamuojisan", email = "kage0427@gmail.com" }
 ]
-dependencies = []
+dependencies = [
+    "pytest>=8.3.4",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
